@@ -2,15 +2,16 @@ package sueprtizen.smartclothing.domain.location.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import sueprtizen.smartclothing.domain.location.dto.SiDoDTO;
-import sueprtizen.smartclothing.domain.location.dto.SiDoResponseDTO;
-import sueprtizen.smartclothing.domain.location.dto.SiGunGuDTO;
-import sueprtizen.smartclothing.domain.location.dto.SiGunGuResponseDTO;
+import sueprtizen.smartclothing.domain.location.dto.*;
 import sueprtizen.smartclothing.domain.location.entity.SiDo;
+import sueprtizen.smartclothing.domain.location.entity.SiGunGu;
 import sueprtizen.smartclothing.domain.location.exception.LocationErrorCode;
 import sueprtizen.smartclothing.domain.location.exception.LocationException;
 import sueprtizen.smartclothing.domain.location.repository.SiDoRepository;
 import sueprtizen.smartclothing.domain.location.repository.SiGunGuRepository;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,15 +32,15 @@ public class LocationServiceImpl implements LocationService {
 
     @Override
     public SiGunGuResponseDTO AllSiGunGuInSiDo(int siDoId) {
-        SiDo siDo = siGunGuRepository.findById(siDoId).orElseThrow(
-                () -> new LocationException(LocationErrorCode.LOCATION_NOT_FOUND)
-        );
-        return new SiGunGuResponseDTO(
-                siDo.getSiGunGus().stream().map(s -> new SiGunGuDTO(
-                        s.getSiGunGuId(),
-                        s.getSiGunGuName(),
-                        s.getLocationKey()
-                )).toList()
-        );
+        SiDo sido = siDoRepository.findBySiDoId(siDoId);
+        List<SiGunGuDTO> siGunGus = siGunGuRepository.findAllBySiDo(sido);
+        return new SiGunGuResponseDTO(siGunGus);
+    }
+
+    public List<Integer> findAllLocationKeys(){
+        List<LocationKey> keys = siGunGuRepository.findAllByLocationKeyNotNull();
+        return keys.stream()
+                .map(LocationKey::locationKey)
+                .collect(Collectors.toList());
     }
 }
